fix: Prevent text overflows

--- a/frontend/src/app/show/components/Show/Logo/logo.module.css
+++ b/frontend/src/app/show/components/Show/Logo/logo.module.css
@@ -3,4 +3,5 @@ img.logo {
     position: absolute;
     top: calc(var(--container-size) * 0.01);
     left: calc(var(--container-size) * 0.01);
+    font-size: 0px;
 }
