--- a/frontend/src/app/show/imageViewer/components/ImageViewer/imageViewer.module.css
+++ b/frontend/src/app/show/imageViewer/components/ImageViewer/imageViewer.module.css
@@ -8,4 +8,5 @@ img.imageViewer {
     height: 100%;
     object-fit: contain;
     object-position: center;
+    font-size: 0px;
 }
